# mordor-intelligence

./: .gitignore  DASHBOARD_GUIDE.md  DATA_STRUCTURE_REVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MONITOR_UPDATE_FREQUENCY.md  README.md  TEMPORAL_DATA_BEST_PRACTICES.md  UPDATE_FREQUENCY_ANALYSIS.md  analyze_markets.py  dashboard.py  pyproject.toml  requirements.txt  run_dashboard.sh  test_implementation.py
.github/workflows/: monthly-scrape.yml
config/: settings.py
data/: sample_report.html  test_version_debug.duckdb
data/exports/: HTML_ANALYSIS_REPORT.md
data/processed/runs/2026-02-06_2633ef73/: reports.jsonl  summary.json
data/processed/runs/2026-02-06_7a7ede05/: reports.jsonl  summary.json
md/: QUICK_START.md  vivid-singing-bonbon.md
mitmproxy/flows/: capture_20260205_141625.json  capture_20260205_141626.json  capture_20260205_141631.json  capture_20260205_141632.json  capture_20260205_141634.json  capture_20260205_141635.json  capture_20260205_141636.json  capture_20260205_142018.json  capture_20260205_142442.json  capture_20260205_142542.json  capture_20260205_142543.json  capture_20260205_211043.json  capture_20260205_211044.json  capture_20260205_211056.json  capture_20260206_083739.json
mitmproxy/scripts/: mordor_capture.py
src/: cli.py
src/database/: schema.sql  versioning.py
src/models/: schema.py  temporal.py
src/parsers/: jsonld_parser.py  regex_patterns.py
src/scrapers/: report_scraper.py  url_discovery.py  wayback_analyzer.py
src/utils/: temporal_calc.py
src/validators/: __init__.py  report_validator.py
(+2 files in other folders)
