[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mordor-intelligence-scraper"
version = "0.1.0"
description = "Monthly scraper for 153 payment market reports from Mordor Intelligence"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=0.9.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
]

[tool.setuptools]
packages = ["src"]
